--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -114,7 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_130"
             android:minHeight="@dimen/dp_130"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:background="@color/color_f4f4f4"/>
         <LinearLayout
             android:visibility="gone"
             android:id="@+id/ll_iv4"
@@ -132,7 +133,8 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
                     android:scaleType="centerCrop"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:background="@color/color_f4f4f4"/>
                 <com.shehuan.niv.NiceImageView
                     app:corner_radius="@dimen/dp_10"
                     android:id="@+id/iv2"
@@ -140,7 +142,8 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
                     android:scaleType="centerCrop"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:background="@color/color_f4f4f4"/>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
@@ -157,7 +160,8 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
                     android:scaleType="centerCrop"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:background="@color/color_f4f4f4"/>
                 <com.shehuan.niv.NiceImageView
                     app:corner_radius="@dimen/dp_10"
                     android:id="@+id/iv4"
@@ -165,7 +169,8 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
                     android:scaleType="centerCrop"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:background="@color/color_f4f4f4"/>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_100"
@@ -203,7 +208,8 @@
             <ImageView
                 android:id="@+id/iv_video"
                 android:layout_width="@dimen/dp_100"
-                android:layout_height="@dimen/dp_150"/>
+                android:layout_height="@dimen/dp_150"
+                android:background="@color/color_f4f4f4"/>
             <ImageView
                 android:layout_centerInParent="true"
                 android:id="@+id/iv_play"
