--- a/app/src/main/res/layout/layout_share_pic.xml
+++ b/app/src/main/res/layout/layout_share_pic.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:id="@+id/iv_pic"/>
+            android:id="@+id/iv_pic"
+            android:background="@color/color_f4f4f4"/>
     </RelativeLayout>
 </LinearLayout>
