--- a/app/src/main/res/layout/social_public_item_layout.xml
+++ b/app/src/main/res/layout/social_public_item_layout.xml
@@ -209,6 +209,7 @@
                 android:id="@+id/iv_video"
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_150"
+                android:scaleType="fitXY"
                 android:background="@color/color_f4f4f4"/>
             <ImageView
                 android:layout_centerInParent="true"
